update bug screen
update where android screen keep expanding

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 .animation {
     animation : berjalan 5s forwards;
 }
