--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
 }
+.container {
+    overflow-x: hidden;
+}
 
 .animation {
     animation : berjalan 5s forwards;
